--- a/public/index.html
+++ b/public/index.html
@@ -65,12 +65,43 @@
                     </div>
 
                     <!-- Right side div  -->
-                    <div class="col-md-6 col-12 main_header_right"></div>
+                    <div class="col-md-6 col-12 main_header_right">
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="images/bg1.jpg" class=" w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/bg2.jpg" class=" w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/bg3.jpg" class=" w-100" alt="...">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
             </div>
         </div>
     </div>    
+
+    <!-- footer code  -->
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">created with love by
+            <a class="text-dark" href="https://mdbootstrap.com/">Nilesh chaudhary</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
 
 
 
