--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <div class="container-fluid main_menu">
         <div class="row">
             <div class="col-md-10 col-12 mx-auto">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg ">
                     <a class="navbar-brand" href="#"> <i class="fa-solid fa-snowflake"></i> DailyWeather <i class="fa-solid fa-snowflake"></i></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,14 +53,14 @@
  
     <!-- main header  -->
 
-    <div class="container-fluid main_menu">
+    <div class="container-fluid ">
         <div class="row">
             <div class="col-md-10 col-12 mx-auto">
                 <div class="row">
                     <!-- left side div  -->
                     <div class="col-md-6 col-12 main_header_left">
                         <p>Welcome to weather app</p>
-                        <h1>Get the latest <span>Weather</span> Info of your city</h1>
+                        <h1>Get the latest <span class="text_clr">Weather</span> Info of your city</h1>
                         <a href="/weather"> <button>check now</button></a>
                     </div>
 
@@ -95,12 +95,10 @@
     </div>    
 
     <!-- footer code  -->
-    <footer class="bg-light text-center text-lg-start">
+    <footer >
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">created with love by
-            <a class="text-dark" href="https://mdbootstrap.com/">Nilesh chaudhary</a>
-        </div>
-        <!-- Copyright -->
+        <p  >created with love by Nilesh chaudhary
+        </p>
     </footer>
 
 
